# ai_box

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
instance/: db.sqlite
setup/sc/: 8081.json
setup/sc/source/: camera_zone.json
src/: app_cfg.py  global_def.py  locale_def.py
src/app_core/: __init__.py  apps.py  cameras.py  conf.py  config.env  controller_utils.py  db.sqlite3  infer_service.py  infer_service_fall.py  loggers.py  main.py  model.py  pages.py  rdhc.py  rdhc_api.py  submain.py  test.py  tt_fall.py
src/app_core/ai_box/: apps.py
src/app_core/app_core/: settings.py  urls.py
src/app_core/instance/: db.sqlite
src/app_core/models/: face_embeddings.npz  output.txt
src/app_core/static/: admin.css  dangky.js  index.css  index.js  liveStyle.css  loginStyle.css  registerStyle.css
src/app_core/templates/: add-member.html  admin.html  api_test.html  changpassword.html  dangky.html  dangnhap.html  index.html  layout.html  layout_menu.html  live.html  live_base.html  login.html  register.html  signup.html  zone.html
src/config/: global_cfg.py
src/cv_core/: __init__.py  common.py  main.py  model.py  trainData.py
src/cv_core/fall/: FallDetector.py  get_output.py  output2.avi
src/cv_core/family/: FallDetector.py  get_output.py  (+1 more)
src/functions/: faceReg.py
src/models/: openface_embeddings.npz
src/utils/: calculation.py  common.py  debug.py  draw.py  exifutil.py  services.py  types_ex.py
test_ui/admin/: admin.css  admin.html
test_ui/dangky/: dangky.css  dangky.html
test_ui/dangnhap/: dangnhap.css  dangnhap.html
(+5 files in other folders)
