[project]
name = "ai-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "decouple",
    "flask",
    "flask-login",
    "flask-sqlalchemy",
    "logger",
    "opencv-python<4.11",
    "scikit-learn",
    "shapely",
    "tensorflow==2.10.0",
    "protobuf<3.20",
    "tornado",
    "ultralytics",
    "watchdog",
]
